Manifest like support for older IE browser

--- a/public/help/index.html
+++ b/public/help/index.html
@@ -23,7 +23,10 @@
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-120x120.png" sizes="120x120">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-144x144.png" sizes="144x144">
   
-
+<!-- Adding Manifest like support for older browser of Internet Explorer-->
+<meta name="msapplication-TileImage" content="/src/images/icons/app-icon-144x144.png">
+<meta name="msapplication-TileColor" content="#fff">
+<meta name="theme-color" content="#3f51b5">
 </head>
 <body>
 
